--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             </div>
             <nav class="main-menu">
                 <ul>
-                    <li><a href="https://www.leggimenu.it/menu/misterboito" target=”_blank”>MENU</a></li>
+                    <li><a href="https://www.leggimenu.it/menu/misterboito" target="_blank">MENU</a></li>
                     <li><a href="#chi-siamo">CHI SIAMO</a></li>
                     <li><a href="#contatti">CONTATTI</a></li>
                 </ul>
@@ -31,12 +31,12 @@
 
     <!-- Contenuto della pagina -->
     <section id="hero">
-        <img src="media/logo.svg">
+        <img src="media/logo.svg" alt="Logo">
     </section>
 
     <section class="box" id="chi-siamo">
         <h1><span style="color: var(--gold)">Mister Boito</span> è un cafè bistrot in stile lounge milanese dove si passa dal pranzo veloce, all'aperitivo fino alla cena.</h1>
-        <a href="https://www.leggimenu.it/menu/misterboito" target=”_blank” class="label">» <u>Sfoglia il menu</u> «</a>
+        <a href="https://www.leggimenu.it/menu/misterboito" target="_blank" class="label">» <u>Sfoglia il menu</u> «</a>
     </section>
 
     <section class="box" id="orari">
@@ -78,10 +78,10 @@
         <h1 class="social-heading">Inoltre seguici sui social per restare aggiornato.</h1>
         <div class="social-icons">
             <a href="https://www.instagram.com/misterboito" target="_blank" class="label">
-                <img src="media/ig.svg" alt="">
+                <img src="media/ig.svg" alt="Instagram">
             </a>
             <a href="https://www.facebook.com/Misterboito" target="_blank" class="label">
-                <img src="media/fb.svg" alt="">
+                <img src="media/fb.svg" alt="Facebook">
             </a>
         </div>
     </section>  
