--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
     <div class="header-container">
         <header class="sticky-header">
-            <div class="logo">
+            <a href="https://andreadesi.github.io/misterboito/" class="logo">
                 <img src="media/header-logo.svg" alt="Logo">
             </div>
             <nav class="main-menu">
