prova fix header

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="style.css">
     <title>Mister Boito Parma</title>
     <link rel="apple-touch-icon" sizes="180x180" href="favicon/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="favicon/favicon-32x32.png">
@@ -16,7 +16,7 @@
 
     <div class="header-container">
         <header class="sticky-header">
-            <a href="https://andreadesi.github.io/misterboito/" class="logo">
+            <div class="logo">
                 <img src="media/header-logo.svg" alt="Logo">
             </div>
             <nav class="main-menu">
@@ -36,7 +36,7 @@
 
     <section class="box" id="chi-siamo">
         <h1><span style="color: var(--gold)">Mister Boito</span> è un cafè bistrot in stile lounge milanese dove si passa dal pranzo veloce, all'aperitivo fino alla cena.</h1>
-        <a href="https://www.leggimenu.it/menu/misterboito" target="_blank" class="label">» <u>Sfoglia il menu</u> «</a>
+        <a href="https://www.leggimenu.it/menu/misterboito" target=”_blank” class="label">» <u>Sfoglia il menu</u> «</a>
     </section>
 
     <section class="box" id="orari">
