minor fix footer

--- a/index.html
+++ b/index.html
@@ -90,9 +90,9 @@
         <div class="footer-container">
             <!-- Colonna Sinistra -->
             <div class="footer-column left-column">
-                <p>Mister Boito - Cafè Bistrot</p>
-                <p>Piazzale Arrigo Boito 5/b,</p>
-                <p>Parma, Italia, 43121</p>
+                <p>Mister Boito - Cafè Bistrot<br>
+                Piazzale Arrigo Boito 5/b,<br>
+                Parma, Italia, 43121</p>
             </div>
 
             <!-- Colonna Destra -->
