--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="it">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -12,6 +13,7 @@
     <meta name="msapplication-TileColor" content="#da532c">
     <meta name="theme-color" content="#ffffff">
 </head>
+
 <body>
 
     <div class="header-container">
@@ -35,17 +37,21 @@
     </section>
 
     <section class="box" id="chi-siamo">
-        <h1><span style="color: var(--gold)">Mister Boito</span> è un cafè bistrot in stile lounge milanese dove si passa dal pranzo veloce, all'aperitivo fino alla cena.</h1>
+        <h1><span style="color: var(--gold)">Mister Boito</span> è un cafè bistrot in stile lounge milanese dove si
+            passa dal pranzo veloce, all'aperitivo fino alla cena.</h1>
         <a href="https://www.leggimenu.it/menu/misterboito" target=”_blank” class="label">» <u>Sfoglia il menu</u> «</a>
     </section>
 
     <section class="box" id="orari">
-        <h1>Da noi puoi trovare colazioni, pranzi, aperitivi, cene, cocktail, bollicine. 
-        <br>
-        <br>
-        Dal lunedì al giovedì dalle <span style="color: var(--gold)">7:30</span> alle <span style="color: var(--gold)">22:00</span>.<br>
-        Venerdì e sabato dalle <span style="color: var(--gold)">7:30</span> alle <span style="color: var(--gold)">01:00.</span><br>
-        Domenica <span style="color: var(--gold)">chiusi</span>.</h1>
+        <h1>Da noi puoi trovare colazioni, pranzi, aperitivi, cene, cocktail, bollicine.
+            <br>
+            <br>
+            Dal lunedì al giovedì dalle <span style="color: var(--gold)">7:30</span> alle <span
+                style="color: var(--gold)">22:00</span>.<br>
+            Venerdì e sabato dalle <span style="color: var(--gold)">7:30</span> alle <span
+                style="color: var(--gold)">01:00.</span><br>
+            Domenica <span style="color: var(--gold)">chiusi</span>.
+        </h1>
     </section>
 
     <section class="dove">
@@ -54,23 +60,18 @@
                 Piazzale Arrigo Boito 5/b, Parma, Italia, 43121</h1>
         </div>
         <div class="right-map">
-            <iframe
-            width="100%"
-            height="100%"
-            frameborder="0"
-            style="border:0"
-            allowfullscreen
-            loading="lazy"
-            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2882.8760998291266!2d10.31888051549152!3d44.78775617909891!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x12ebebcdbdb3f28b%3A0x4d2846e7d90b50ec!2sPiazzale%20Arrigo%20Boito%205%2FB%2C%2043121%20Parma%20PR!5e0!3m2!1sit!2sit!4v1646901234513!5m2!1sit!2sit">
-        </iframe>
+            <iframe width="100%" height="100%" frameborder="0" style="border:0" allowfullscreen loading="lazy"
+                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2882.8760998291266!2d10.31888051549152!3d44.78775617909891!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x12ebebcdbdb3f28b%3A0x4d2846e7d90b50ec!2sPiazzale%20Arrigo%20Boito%205%2FB%2C%2043121%20Parma%20PR!5e0!3m2!1sit!2sit!4v1646901234513!5m2!1sit!2sit">
+            </iframe>
 
         </div>
     </section>
 
     <section class="box" id="contatti">
         <h1>Per info chiama il <span style="color: var(--gold)">+39 0521 375114</span>
-        <br>
-        o scrivici una mail a <a href="mailto:mima.misterboito@gmail.com" style="color: var(--gold)">mima.misterboito@gmail.com</a>
+            <br>
+            o scrivici una mail a <a href="mailto:mima.misterboito@gmail.com"
+                style="color: var(--gold)">mima.misterboito@gmail.com</a>
         </h1>
     </section>
 
@@ -84,22 +85,22 @@
                 <img src="media/fb.svg" alt="Facebook">
             </a>
         </div>
-    </section>  
-    
+    </section>
+
     <footer>
         <div class="footer-container">
             <!-- Colonna Sinistra -->
             <div class="footer-column left-column">
                 <p>Mister Boito - Cafè Bistrot<br>
-                Piazzale Arrigo Boito 5/b,<br>
-                Parma, Italia, 43121</p>
+                    Piazzale Arrigo Boito 5/b,<br>
+                    Parma, Italia, 43121</p>
             </div>
 
             <!-- Colonna Destra -->
             <div class="footer-column right-column">
                 <p>Tel: +39 0521 375114</p>
                 <p>Mail: <a href="mailto:mima.misterboito@gmail.com">mima.misterboito@gmail.com</a></p>
-                <p>Seguici su: 
+                <p>Seguici su:
                     <a href="https://www.instagram.com/misterboito" target="_blank">
                         <img src="media/ig.svg" alt="Instagram">
                     </a>
@@ -107,9 +108,10 @@
                         <img src="media/fb.svg" alt="Facebook">
                     </a>
                 </p>
-            </div>            
+            </div>
         </div>
     </footer>
 
 </body>
+
 </html>
